fix(sidedrawer): long title text visibility fix

--- a/src/components/reusable/sideDrawer/sideDrawer.scss
+++ b/src/components/reusable/sideDrawer/sideDrawer.scss
@@ -112,6 +112,8 @@ form {
 
 .header-label-title {
   margin-right: 32px;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 .label {
@@ -124,6 +126,9 @@ form {
   color: var(--kd-color-text-title-primary);
   margin: 0;
   order: 1;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  word-break: break-word;
 
   &.ai-connected {
     color: var(--kd-color-text-title-ai-primary);
